--- a/crates/kmao_decrypt_bin/Cargo.toml
+++ b/crates/kmao_decrypt_bin/Cargo.toml
@@ -6,4 +6,5 @@ authors = ["YinMo19 <me@yinmo19.top>"]
 
 [dependencies]
 kmao_decrypt = { workspace = true }
-tokio ={ workspace = true}
+tokio = { workspace = true }
+openssl = { workspace = true }
