--- a/crates/kmao_decrypt_bin/Cargo.toml
+++ b/crates/kmao_decrypt_bin/Cargo.toml
@@ -9,7 +9,7 @@ homepage = { workspace = true }
 documentation = { workspace = true }
 repository = { workspace = true }
 license = { workspace = true }
-readme = { workspace = true }
+readme = "README.md"
 keywords = { workspace = true }
 exclude = [
     ".editorconfig",
